--- a/src/pages/Public/styles/public.css
+++ b/src/pages/Public/styles/public.css
@@ -1,25 +1,26 @@
 .heading {
-    text-align: center;
-    margin-bottom: 10px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .bottom {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 2em;
 }
 
 .bottom>a {
-    flex: 1;
-    font-size: 12px;
+  flex: 1;
+  font-size: 12px;
 }
 
 .bottom>button {
-    flex: 2;
-    max-width: fit-content;
+  flex: 2;
+  max-width: fit-content;
 }
 
 .bottom>.last {
-    text-align: right;
+  text-align: right;
 }
